[package]
name = "redis-http"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
redis-module = { version = "2.0.7" }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
url = "2.5.7"
warp = { version = "0.4.2", features = ["server"] }
redis = "0.32.5"
base64 = "0.22.1"
quick-xml = "0.38.3"

[dev-dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
serde_json = "1.0.145"

[build-dependencies]
